<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#AAE"
    tools:context=".About">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:contentDescription="TODO"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dip"
        android:text="@string/copyright"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/About_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Progcode"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="18dp"
        android:layout_marginRight="16dip"
        android:text="@string/About_text"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/copyright"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="14dp"
        android:text="@string/developer"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/devId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/developer"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="18dp"
        android:text="@string/devId"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/devId"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="14dp"
        android:text="@string/group"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/Progcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group"
        android:layout_marginLeft="16dip"
        android:layout_marginTop="14dp"
        android:text="@string/Progcode"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp"/>


</RelativeLayout>